# tearleads

./: .ansible-lint  .coderabbit.yaml  .dependency-cruiser.json  .dockerignore  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .npmrc  .secrets  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  REVIEW.md  biome.json  clippy.toml  commitlint.config.ts  deny.toml  knip.json  knip.ts  knipDependencies.ts  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  promptfooconfig.yaml  requirements.txt  rust-toolchain.toml  rustfmt.toml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts  vitest.shared.ts
.claude/: settings.json
.claude/commands/: address-coderabbit-feedback.md  address-gemini-feedback.md  commit-and-push.md  convert-docs.md  cost-model.md  cross-agent-review.md  enter-merge-queue.md  fix-playwright-tests.md  fix-tests.md  follow-up-with-coderabbit.md  follow-up-with-gemini.md  mark-high-priority.md  mark-needs-qa.md  optimize-test-execution.md  pr-summary.md  preen-api-security.md  preen-compliance-docs.md  preen-database-performance.md  preen-deferred-fixes.md  preen-dependency-security.md  preen-i18n.md  (+21 more)
.gemini/: INSTRUCTIONS.md
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: commit-msg  pre-commit  pre-push
ansible/: ansible.cfg  requirements.yml
compliance/: AGENTS.md  infrastructure-controls.md  vendor-registry.md
crates/api-client-rs/: Cargo.toml  README.md
crates/api-client-rs/src/: execution.rs  lib.rs
crates/api-client-wasm/: Cargo.toml  README.md
crates/api-client-wasm/src/: lib.rs
crates/api-domain-wasm/: Cargo.toml  README.md
crates/api-domain-wasm/src/: lib.rs
crates/api-v2/: Cargo.toml  Dockerfile  README.md
crates/api-v2-contracts/: Cargo.toml  build.rs
crates/api-v2-contracts/src/: lib.rs
crates/api-v2-ping-wasm/: Cargo.toml  README.md
crates/api-v2-ping-wasm/src/: lib.rs
crates/api-v2/src/: admin_auth.rs  admin_harness.rs  admin_service.rs  admin_service_common.rs  ai_service.rs  auth_service.rs  billing_auth.rs  billing_service.rs  chat_service.rs  lib.rs  lib_tests.rs  main.rs  main_tests.rs  mls_service.rs  notification_service.rs  ping.rs  revenuecat_service.rs  startup.rs  upstream_connect.rs  vfs_service.rs  vfs_shares_service.rs
crates/api-v2/src/admin_auth/: tests.rs
crates/api-v2/src/admin_harness/: authorizer.rs  postgres_repository.rs  postgres_repository_tests.rs  redis_repository.rs  tests.rs
crates/api-v2/src/admin_harness/postgres_repository/: ai_usage.rs  auth.rs  billing.rs  fixtures.rs
crates/api-v2/src/admin_service/: detail_reads.rs  group_mutations.rs  list_reads.rs  organization_user_mutations.rs  storage_reads.rs
crates/api-v2/src/admin_service/detail_reads/: tests.rs
crates/api-v2/src/auth_service/: config.rs  session_store.rs  support.rs
crates/api-v2/src/auth_service/session_store/: tests.rs
crates/api-v2/src/auth_service/session_store/tests/: error_paths.rs
crates/api-v2/src/auth_service/support/: tests.rs
crates/api-v2/src/billing_auth/: tests.rs
crates/api-v2/src/chat_service/: tests.rs
crates/api-v2/src/postgres_gateway/: ai_usage.rs  auth.rs  billing.rs  error.rs  groups.rs  introspection.rs  mod.rs  organizations.rs  users.rs
crates/api-v2/tests/: adminService.rs  admin_adapter_flow.rs  admin_service.rs  admin_service_context.rs  admin_service_delete.rs  admin_service_detail_reads.rs  admin_service_group_mutations.rs  admin_service_groups.rs  admin_service_organization_user_mutations.rs  admin_service_rows.rs  admin_transport.rs  ai_service.rs  auth_service.rs  auth_service_access_context.rs  auth_service_additional.rs  billing_service.rs  chat_service.rs  pingRoutes.rs
crates/api-v2/tests/admin_adapter_flow/: auth_guards.rs  postgres_flow.rs  redis_flow.rs
crates/api-v2/tests/admin_service_detail_reads/: context.rs  error_paths.rs  groups.rs
crates/api-v2/tests/admin_service_group_mutations/: guards.rs
crates/api-v2/tests/admin_transport/: round_trip.rs
crates/api-v2/tests/support/: admin_service.rs  mod.rs
crates/data-access-postgres/: Cargo.toml
crates/data-access-postgres/src/: admin_adapter.rs  admin_read_adapter.rs  gateway.rs  lib.rs
crates/data-access-postgres/src/admin_adapter/: tests.rs
crates/data-access-postgres/src/admin_adapter/tests/: get_organization_users_tests.rs  get_user_tests.rs  read_mapping_tests.rs
crates/data-access-postgres/src/admin_read_adapter/: tests.rs
crates/data-access-postgres/src/admin_read_adapter/tests/: get_organization_users_tests.rs  get_user_tests.rs
crates/mls-core-wasm/: Cargo.toml  README.md
crates/mls-core-wasm/src/: crypto.rs  error.rs  lib.rs  messaging.rs  model.rs  operations.rs  protocol.rs  protocol_tests.rs
docs/: agent-tool-calling-matrix.md  backup-restore.md  encryption-architecture.md  getting-started.md
k8s/: README.md  dns.tf  main.tf  outputs.tf  variables.tf
patches/: @capacitor__filesystem@8.1.0.patch
proto/: buf.gen.yaml  buf.yaml
scripts/: analyzeBundle.sh  applyCiVersionFromSha.sh  applyPostgresSchema.sh  applyPostgresSchema.ts  approveSkippedChecks.sh  approveSkippedChecks.ts  backupSecrets.sh  backupSharedData.sh  benchmarkBunMigration.sh  bootstrapDevWorkstation.sh  bringUpCluster.sh  buildContainers.sh  buildMlsWasm.sh  bumpVersion.sh  checkAgentsSync.sh  checkAndroidKeystoreIntegrity.test.ts  checkAndroidKeystoreIntegrity.ts  checkBinaryFiles.sh  checkCircularImports.sh  checkFileNames.sh  checkGithubActions.sh  checkJs.sh  checkNodeVersion.sh  checkPort.ts  checkPreenEcosystem.sh  checkSkillParity.sh  checkSmtpPort.js  checkSmtpPort.ts  checkTerraform.sh  clearAndroidData.sh  clearAppData.sh  codegenApiV2PingWasm.sh  codegenWasm.sh  codex.sh  copyTestFilesAndroid.sh  copyTestFilesIos.sh  countLines.ts  createAccount.ts  createCommitOnBranchPayload.mjs  createCommitOnBranchPayload.ts  (+91 more)
tee/: README.md  compute.tf  iam.tf  kms.tf  network.tf  outputs.tf  variables.tf  versions.tf
terraform/: dns.tf  main.tf  outputs.tf  variables.tf
tuxedo/: README.md  bounce.sh  init-env.sh  tuxedo-shell.sh  tuxedo.sh  tuxedoKill.sh
(+1059 files in other folders)
