[workspace]
members = [
  "crates/api-client-rs",
  "crates/api-client-wasm",
  "crates/api-v2-contracts",
  "crates/api-v2",
  "crates/api-v2-ping-wasm",
  "crates/api-domain-core",
  "crates/api-domain-wasm",
  "crates/data-access-postgres",
  "crates/data-access-redis",
  "crates/data-access-traits",
  "crates/mls-core-wasm"
]
resolver = "2"

[workspace.lints.rust]
# CRITICAL: Never downgrade or remove. No unsafe code is permitted in this workspace.
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
