[package]
name = "tearleads-api-client-rs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tearleads-api-v2-contracts = { version = "0.1.0", path = "../api-v2-contracts" }
tonic = { version = "0.13.1", default-features = false, features = ["transport"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt"] }

[lints]
workspace = true
