[package]
name = "tearleads-api-client-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tearleads-api-client-rs = { version = "0.1.0", path = "../api-client-rs" }
wasm-bindgen = "0.2.105"

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen", "serde-wasm-bindgen"]

[lints]
workspace = true
