[package]
name = "tearleads-api-domain-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tearleads-api-domain-core = { version = "0.1.0", path = "../api-domain-core" }
wasm-bindgen = "0.2.105"

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen"]

[lints]
workspace = true
