[package]
name = "tearleads-api-v2-contracts"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
prost = "0.13.5"
tonic = { version = "0.12.3", default-features = false, features = ["codegen", "prost"] }

[build-dependencies]
prost-build = "0.13.5"
protoc-bin-vendored = "3.2.0"
tonic-build = { version = "0.12.3", default-features = false, features = ["prost"] }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["prost"]
