[package]
name = "tearleads-api-v2-contracts"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true, features = ["codegen"] }
tonic-prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protoc-bin-vendored = "3.2.0"
tonic-prost-build = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types", "tonic-prost"]
