[package]
name = "tearleads-api-v2-ping-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
wasm-bindgen = "0.2.105"

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen", "serde-wasm-bindgen"]

[lints]
workspace = true
