[package]
name = "tearleads-api-v2"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
tearleads-api-domain-core = { version = "0.1.0", path = "../api-domain-core" }
tearleads-api-v2-contracts = { version = "0.1.0", path = "../api-v2-contracts" }
tearleads-data-access-traits = { version = "0.1.0", path = "../data-access-traits" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "net"] }
tonic = { version = "0.13.1", default-features = false, features = ["codegen", "prost"] }
tonic-web = "0.13.1"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

[dev-dependencies]
http-body-util = "0.1.3"
serde_json = "1.0.145"
tearleads-data-access-postgres = { version = "0.1.0", path = "../data-access-postgres" }
tearleads-data-access-redis = { version = "0.1.0", path = "../data-access-redis" }
tonic = { version = "0.13.1", default-features = false, features = ["transport", "router"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tower = { version = "0.5.2", features = ["util"] }

[lints]
workspace = true
