[package]
name = "tearleads-mls-core-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chacha20poly1305 = "0.10.1"
ed25519-dalek = "2.2.0"
getrandom = { version = "0.2.16", features = ["js"] }
hex = "0.4.3"
hkdf = "0.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
sha2 = "0.10.9"
wasm-bindgen = "0.2.105"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen"]

[lints]
workspace = true
